// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PillButtonEnhanced> component in active, collapsed state (with content prop) should render correctly 1`] = `
<div>
  <div
    class="PillButtonEnhanced PillButtonEnhanced--isActive"
  >
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main"
      data-state="closed"
      id="radix-:r4:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__valueSeparator"
      >
        :
      </span>
      <span
        class="PillButtonEnhanced__content"
        title="This pill is in use"
      >
        This pill is in use
      </span>
    </div>
    <div
      class="PillButtonEnhanced__button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="clear label"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </div>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component in active, open state (content and isOpen prop) should render correctly 1`] = `
<div>
  <div
    class="PillButtonEnhanced PillButtonEnhanced--isActive"
  >
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main"
      data-state="closed"
      id="radix-:ra:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__valueSeparator"
      >
        :
      </span>
      <span
        class="PillButtonEnhanced__content"
        title="This pill is in use"
      >
        This pill is in use
      </span>
    </div>
    <div
      class="PillButtonEnhanced__button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="clear label"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </div>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component in inactive, collapsed state (with minimal props) should render correctly 1`] = `
<div>
  <div
    class="PillButtonEnhanced"
  >
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main"
      data-state="closed"
      id="radix-:r0:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__contentSeparator"
      >
        ,
      </span>
      <span
        class="PillButtonEnhanced__additionalContent"
      >
        +2
      </span>
    </div>
    <div
      class="PillButtonEnhanced__button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="down arrow"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </div>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component in inactive, open state (isOpen prop) should render correctly 1`] = `
<div>
  <div
    class="PillButtonEnhanced"
  >
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main"
      data-state="closed"
      id="radix-:r2:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
    </div>
    <div
      class="PillButtonEnhanced__button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="up arrow"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </div>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component with additional props should render correctly with priority selector 1`] = `
<div>
  <div
    class="PillButtonEnhanced PillButtonEnhanced--isActive"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="priorityButton"
      class="Button Button--size_small Button--variant_ghost Button--context_secondary IconButton--size_small PrioritySelector__icon PrioritySelector__icon--mandatory PillButtonEnhanced__priority test-class"
      data-state="closed"
      id="radix-:rk:"
      style="width: auto;"
      type="button"
    >
      <svg
        class="IconButton__icon--size_small"
        data-testid="default-icon"
        viewBox="0 0 24 24"
      />
    </button>
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main"
      data-state="closed"
      id="radix-:ri:"
      role="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__valueSeparator"
      >
        :
      </span>
      <span
        class="PillButtonEnhanced__content"
        title="This pill is in use"
      >
        This pill is in use
      </span>
    </div>
    <div
      class="PillButtonEnhanced__button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="clear label"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </div>
  </div>
</div>
`;

exports[`<PillButtonEnhanced> component with additional props should set style according to prop 1`] = `
<div>
  <div
    class="PillButtonEnhanced PillButtonEnhanced--isActive"
  >
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      class="PillButtonEnhanced__main"
      data-state="closed"
      id="radix-:rg:"
      role="button"
      style="max-width: fit-content;"
      tabindex="0"
      type="button"
    >
      <span
        class="PillButtonEnhanced__name"
      >
        Pill name
      </span>
      <span
        class="PillButtonEnhanced__valueSeparator"
      >
        :
      </span>
      <span
        class="PillButtonEnhanced__content"
        title="This pill is in use"
      >
        This pill is in use
      </span>
    </div>
    <div
      class="PillButtonEnhanced__button"
      role="button"
      tabindex="0"
    >
      <svg
        aria-label="clear label"
        data-testid="default-icon"
        height="16px"
        viewBox="0 0 24 24"
        width="16px"
      />
    </div>
  </div>
</div>
`;
